--- a/MeetupEvents/MeetupEvents/Base.lproj/Main.storyboard
+++ b/MeetupEvents/MeetupEvents/Base.lproj/Main.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uL0-fd-KYe">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -9,16 +13,153 @@
         <!--Meetup Events Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MeetupEventsController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MeetupEventsController" customModule="MeetupEvents" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="UZ7-Rv-qPn">
+                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ag8-hy-lEn">
+                                <rect key="frame" x="0.0" y="120" width="375" height="547"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCell" rowHeight="123" id="cDY-6G-V9e" customClass="EventCell" customModule="MeetupEvents" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="123"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cDY-6G-V9e" id="PPj-zu-Lmi">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="122.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="jSs-Qh-GSw">
+                                                    <rect key="frame" x="0.0" y="0.0" width="112.5" height="122.5"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="event name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f6p-wm-QNm">
+                                                    <rect key="frame" x="115" y="11" width="245" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="nJr-fK-ye8"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="event description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hSc-JW-pbQ">
+                                                    <rect key="frame" x="115" y="32" width="260" height="90.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jSs-Qh-GSw" firstAttribute="leading" secondItem="PPj-zu-Lmi" secondAttribute="leading" id="3px-UB-1kX"/>
+                                                <constraint firstItem="f6p-wm-QNm" firstAttribute="leading" secondItem="jSs-Qh-GSw" secondAttribute="trailing" constant="2.5" id="Cf2-gs-pde"/>
+                                                <constraint firstAttribute="trailing" secondItem="hSc-JW-pbQ" secondAttribute="trailing" id="FwY-at-SeJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="hSc-JW-pbQ" secondAttribute="bottom" id="K3y-Xj-vcf"/>
+                                                <constraint firstItem="hSc-JW-pbQ" firstAttribute="leading" secondItem="jSs-Qh-GSw" secondAttribute="trailing" constant="2.5" id="Qfb-ib-3B0"/>
+                                                <constraint firstItem="hSc-JW-pbQ" firstAttribute="top" secondItem="f6p-wm-QNm" secondAttribute="bottom" id="SxC-aM-5vq"/>
+                                                <constraint firstItem="f6p-wm-QNm" firstAttribute="trailing" secondItem="PPj-zu-Lmi" secondAttribute="trailingMargin" id="UnQ-2J-L18"/>
+                                                <constraint firstAttribute="bottom" secondItem="jSs-Qh-GSw" secondAttribute="bottom" id="r0g-IM-1EJ"/>
+                                                <constraint firstItem="jSs-Qh-GSw" firstAttribute="top" secondItem="PPj-zu-Lmi" secondAttribute="top" id="xBG-BS-TWL"/>
+                                                <constraint firstItem="f6p-wm-QNm" firstAttribute="top" secondItem="PPj-zu-Lmi" secondAttribute="topMargin" id="yZt-5V-3X3"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstItem="jSs-Qh-GSw" firstAttribute="width" secondItem="cDY-6G-V9e" secondAttribute="width" multiplier="0.3" id="Z2j-M0-kY0"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="eventDescription" destination="hSc-JW-pbQ" id="QfB-Gd-fkR"/>
+                                            <outlet property="eventImage" destination="jSs-Qh-GSw" id="tsN-ky-Q9A"/>
+                                            <outlet property="eventName" destination="f6p-wm-QNm" id="fyW-PF-Nuv"/>
+                                            <segue destination="h0w-ll-wxd" kind="show" id="pBc-Ea-Zhg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ag8-hy-lEn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="4fd-em-dFo"/>
+                            <constraint firstItem="ag8-hy-lEn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cI5-Uk-Enu"/>
+                            <constraint firstItem="ag8-hy-lEn" firstAttribute="top" secondItem="UZ7-Rv-qPn" secondAttribute="bottom" id="lup-xU-acy"/>
+                            <constraint firstItem="UZ7-Rv-qPn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oA3-Re-DHD"/>
+                            <constraint firstItem="ag8-hy-lEn" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="p5y-Pj-Cuz"/>
+                            <constraint firstItem="UZ7-Rv-qPn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qk7-TT-Hyp"/>
+                            <constraint firstItem="UZ7-Rv-qPn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="spU-Vb-q6C"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="2iI-Th-BUL"/>
+                    <connections>
+                        <outlet property="searchBar" destination="UZ7-Rv-qPn" id="yWr-wd-fQS"/>
+                        <outlet property="tableView" destination="ag8-hy-lEn" id="qsg-2f-alL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1079.2" y="133.5832083958021"/>
+        </scene>
+        <!--Meetup Detail Controller-->
+        <scene sceneID="qRw-gZ-GeC">
+            <objects>
+                <viewController id="h0w-ll-wxd" customClass="MeetupDetailController" customModule="MeetupEvents" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rp2-47-z7L">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rsvp status" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rhc-Px-9Tf">
+                                <rect key="frame" x="16" y="104" width="329" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bac-wc-mzR">
+                                <rect key="frame" x="146.5" y="617" width="82" height="30"/>
+                                <state key="normal" title="update rsvp"/>
+                                <connections>
+                                    <action selector="udpateRSVP:" destination="h0w-ll-wxd" eventType="touchUpInside" id="jkR-Qo-Hca"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Rhc-Px-9Tf" firstAttribute="top" secondItem="u8G-rh-mHs" secondAttribute="top" constant="40" id="3vf-fC-nmE"/>
+                            <constraint firstItem="u8G-rh-mHs" firstAttribute="bottom" secondItem="bac-wc-mzR" secondAttribute="bottom" constant="20" id="4MI-MB-xx3"/>
+                            <constraint firstItem="u8G-rh-mHs" firstAttribute="trailing" secondItem="Rhc-Px-9Tf" secondAttribute="trailing" constant="30" id="LGE-4G-ce0"/>
+                            <constraint firstItem="bac-wc-mzR" firstAttribute="centerX" secondItem="rp2-47-z7L" secondAttribute="centerX" id="dqe-fd-iEa"/>
+                            <constraint firstItem="Rhc-Px-9Tf" firstAttribute="leading" secondItem="u8G-rh-mHs" secondAttribute="leading" constant="16" id="xVg-l1-QLm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="u8G-rh-mHs"/>
+                    </view>
+                    <connections>
+                        <outlet property="rsvpStatusLabel" destination="Rhc-Px-9Tf" id="cdu-Vo-MyM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5mQ-Vx-1eW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1936.8" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jCE-08-dDk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uL0-fd-KYe" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f6T-pD-Kj2">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="U3t-eC-f3P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DQQ-eQ-11E" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="252" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholderImage" width="512" height="512"/>
+    </resources>
 </document>
